[package]
name = "axum-project"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "sqlite", "uuid" ] }
reqwest = { version = "0.13.3", features = ["json"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["full"] }
http-body-util = "0.1.2"
serde_json = "1.0"

[[test]]
name = "main_test"
path = "test/main_test.rs"
harness = true